@@ -56,7 +56,8 @@ if ($signout_page) {
 /* internal gettext functions will fail, if language is not set */
 set_up_language($squirrelmail_language, true, true);
 ?>
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+  "http://www.w3.org/TR/1999/REC-html401-19991224/loose.dtd">
 <html>
 <head>
 <?php
